chore: formatting, fix button text overflow (#482)

--- a/src/css/careers/job.module.css
+++ b/src/css/careers/job.module.css
@@ -24,6 +24,7 @@
 }
 
 .job__title {
+  max-width: 325px;
   margin-bottom: 0.5rem;
 }
 
